<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SharedPreferencesFragment">

    <TextView
        android:id="@+id/textViewLab7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sol21826_uvg_edu_gt"
        android:textColor="#0C0C0C"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailText_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="345dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/correo"
            android:layout_width="345dp"
            android:layout_height="43dp"
            android:autofillHints=""
            android:hint="@string/correo"
            android:inputType="textWebEmailAddress"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordText_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="345dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailText_login">

        <EditText
            android:id="@+id/password"
            android:layout_width="345dp"
            android:layout_height="43dp"
            android:autofillHints=""
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonIniciarSesion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#F66E43"
        android:text="@string/iniciar_secion"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText_login"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/EmailText_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rick_and_morty"
        android:contentDescription="@string/image" />

</androidx.constraintlayout.widget.ConstraintLayout>